--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <tr>
       <td>The Pelican Brief</td>
       <td>48 laws of Power</td>
-      <td>books</td>
+      <td>Set up</td>
     </tr>
     <tr>
       <td>Finding Forester</td>
