--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <h1>Magnus Acquah Doughan</h1>
 
-  <img src="https://emojiisland.com/pages/free-download-emoji-icons-png" alt="Magnus Acquah Doughan">
+  <img src="https://cdn.shopify.com/s/files/1/1061/1924/files/Thinking_Face_Emoji.png?6135488989279264585" alt="Magnus Acquah Doughan">
 
   <p>Hello. I am a Developer.</p>
   <p> I live in a small town somewhere in the world.</p>
